# sansio-jsonrpc

./: .gitignore  .travis.yml  LICENSE.md  Makefile  README.md  pyproject.toml
jsonrpc/: __init__.py  _impl.py
sansio_jsonrpc/: __init__.py  exc.py  main.py  types.py
tests/: test_exc.py  test_jsonrpc.py  test_main.py
