[tool.black]
line-length = 88

[tool.poetry]
name = "sansio-jsonrpc"
version = "0.2.0"
description = "JSON-RPC v2.0 Sans I/O"
license = "MIT"
authors = ["Mark E. Haase <mehaase@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/hyperiongray/sansio-jsonrpc"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Internet"
]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
black = "^19.10b0"
pytest = "^5.4.1"
pytest-cov = "^2.8.1"
codecov = "^2.0.22"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
